<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Logo"
        app:layout_constraintBottom_toTopOf="@+id/et_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_full_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_address"
        app:layout_constraintEnd_toStartOf="@+id/et_full_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/et_full_name_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_fullname"
        app:layout_constraintTop_toTopOf="@+id/tv_fullname" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_address"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_phone"
        app:layout_constraintStart_toStartOf="@+id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@+id/tv_fullname" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/et_address_hint"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_address"
        app:layout_constraintTop_toTopOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_phone"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_gender"
        app:layout_constraintStart_toStartOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/et_phone_hint"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_phone"
        app:layout_constraintTop_toTopOf="@+id/tv_phone" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/rg_gender"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tv_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_gender"
        app:layout_constraintTop_toTopOf="@+id/tv_gender">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckGender"
            android:paddingRight="16dp"
            android:text="@string/rb_male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckGender"
            android:text="@string/rb_female" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="356dp" />

    <TextView
        android:id="@+id/tv_vaccine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_vaccine"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <CheckBox
        android:id="@+id/cb_first"
        android:layout_width="130dp"
        android:layout_height="wrap_content"

        android:text="@string/cb_first_dose"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/cb_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vaccine" />

    <EditText
        android:id="@+id/et_date1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_first_dose_date"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cb_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_first"
        app:layout_constraintTop_toTopOf="@+id/cb_first" />

    <CheckBox
        android:id="@+id/cb_second"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/cb_second_dose"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/cb_third"
        app:layout_constraintEnd_toStartOf="@+id/et_date2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_first" />

    <EditText
        android:id="@+id/et_date2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_second_dose_date"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cb_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_second"
        app:layout_constraintTop_toTopOf="@+id/cb_second" />

    <CheckBox
        android:id="@+id/cb_third"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/cb_third_dose"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/et_date3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_second" />

    <EditText
        android:id="@+id/et_date3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_third_dose_date"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cb_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_third"
        app:layout_constraintTop_toTopOf="@+id/cb_third" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="591dp" />

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:onClick="onOk"
        android:text="@string/btn_OK"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_OK"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.25"
        android:onClick="onCancel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>